# wehoop-wnba-data

./: .Rbuildignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  DESCRIPTION  LICENSE  LICENSE.md  README.md  requirements.txt
.github/: copilot-instructions.md
R/: 0000_create_wehoop_releases_init.R  0001_push_existing_release_data.R  espn_wnba_01_pbp_creation.R  espn_wnba_02_team_box_creation.R  espn_wnba_03_player_box_creation.R  espn_wnba_04_rosters_creation.R  espn_wnba_05_player_season_stats_creation.R  espn_wnba_06_team_season_stats_creation.R  espn_wnba_07_standings_creation.R  espn_wnba_08_draft_creation.R  espn_wnba_09_game_rosters_creation.R  espn_wnba_10_officials_creation.R  manifest_upload_helper.R  minify_json_folders.R  (+5 more)
python/: pyproject.toml  scrape_wnba_json.py  scrape_wnba_json_threaded.py  scrape_wnba_schedules.py  scrape_wnba_schedules_threaded.py
python/tests/fixtures/: README.md
python/tests/fixtures/raw/wnba/player_core/json/: 2490553.json  2529122.json  2529140.json  869.json  887.json
python/tests/fixtures/raw/wnba/schedules/parquet/: wnba_schedule_2025.parquet  wnba_schedule_2026.parquet
python/tests/fixtures/released/: draft_2026.parquet  game_rosters_2025.parquet  officials_2025.parquet  play_by_play_2025.parquet  play_by_play_2026.parquet  player_box_2025.parquet  player_season_stats_2025.parquet  rosters_2025.parquet  shots_2025.parquet  standings_2025.parquet  team_box_2025.parquet  team_season_stats_2025.parquet  wnba_schedule_2025.parquet
python/tests/wnba_data_build/: _parity_helpers.py  test_all_datasets_smoke.py  test_build.py  test_build_smoke.py  test_cli.py  test_fixtures.py  test_ingest.py  test_ingest_http.py  test_io.py  test_logging.py  test_manifest_and_backfills.py  test_parity_draft.py  test_parity_game_rosters.py  test_parity_pbp.py  test_parity_player_box.py  test_parity_schedules.py  test_parity_season_datasets.py  test_parity_shots.py  test_parity_team_box.py  test_pbp_ft_pin_branch.py  test_publish.py
python/wnba_data_build/: README.md  __init__.py  __main__.py  _logging.py  build.py  cli.py  config.py  ingest.py  io.py  publish.py  reshapers.py
(+793 files in other folders)
